refactor searchDevice to service layer